--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-    <script type='text/javascript' src='/gug.js'></script>
+    <script type='text/javascript' src='gug.js'></script>
     <style>
       body{width:300px;height:400px;}
       .gug-Board{position:relative;left:20px;top:20px;width:200px;height:250px;background-color:#eeeeee;padding:0px;border:1px solid darkgray;}
